--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -41,7 +41,7 @@
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
           <li><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;捐赠家族</a></li>
-          <li><a href="https://weibo.com/u/6584151447/home" target="_blank"><i class="fa fa-home"></i> &nbsp;家主微博</a></li>
+          <li><a href="https://weibo.com/6584151447/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><i class="fa fa-home"></i> &nbsp;家主微博</a></li>
 		  <li><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
           <li><a href="logout"><i class="fa fa-sign-out"></i> &nbsp;退出系统</a></li>
 		</ul>
@@ -87,9 +87,9 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      Version 3.0.0
+      Version 1.0.0
     </div>
-    Copyright &copy; 2017 <a href="http://www.renren.io" target="_blank">renren.io</a> All Rights Reserved
+    Copyright &copy; 2018 <a href="" target="_blank">秀才科技</a> All Rights Reserved
   </footer>
 
   <!-- Add the sidebar's background. This div must be placed
