--- a/src/main/webapp/WEB-INF/views/index1.html
+++ b/src/main/webapp/WEB-INF/views/index1.html
@@ -41,8 +41,8 @@
             </div> -->
             <!-- 右侧导航 -->
             <ul class="layui-nav larry-header-item">
-				<li class="layui-nav-item"><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;捐赠作者</a></li>
-				<li class="layui-nav-item"><a href="http://www.renren.io" target="_blank"><i class="fa fa-home"></i> &nbsp;编程教程</a></li>
+				<li class="layui-nav-item"><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;捐赠秀才</a></li>
+				<li class="layui-nav-item"><a href="https://weibo.com/6584151447/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><i class="fa fa-home"></i> &nbsp;秀才微博</a></li>
 				<li class="layui-nav-item"><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
        			<li class="layui-nav-item"><a href="logout"><i class="fa fa-sign-out"></i> &nbsp;退出系统</a></li>
             </ul>
@@ -77,7 +77,7 @@
 	<!-- 底部区域 -->
 	<div class="layui-footer layui-larry-foot" id="larry-footer">
 		<div class="layui-mian">
-		    Copyright &copy; 2017 <a href="http://www.renren.io" target="_blank">renren.io</a> All Rights Reserved
+		    Copyright &copy;2018 <a href="" target="_blank">秀才科技</a> All Rights Reserved
 		</div>
 	</div>
 	
