--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -21,14 +21,14 @@
 
         <h3>&nbsp;&nbsp;&nbsp;获取帮助</h3>
         <ul>
-            <li>Git项目地址：<a href="https://gitee.com/babaio/renren-security" target="_blank">https://github.com/yishuijianghu/xiucai/tree/master</a></li>
+            <li>Git项目地址：<a href="https://github.com/yishuijianghu/xiucai" target="_blank">https://github.com/yishuijianghu/xiucai</a></li>
             <li>关注秀才家族微博，您的关注就是对家族最好的支持</li>
         </ul>
 
         <h3>&nbsp;&nbsp;&nbsp;秀才QQ</h3>
         <ul>
             <li>1024936497</li>
-            <li>家族俱乐部网站：www.xiucai.club(暂时未开通)</li>
+            <li>一水家族俱乐部网站：www.xiucai.club(暂时未开通)</li>
         </ul>
     </div>
 </div>
