--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -40,6 +40,7 @@
 	  <div style="float:left;color:#fff;padding:15px 10px;">欢迎 {{user.username}}</div>
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
+          <li><a href="javascript:;" @click="welcome"><i class="font-color:red"></i> &nbsp;族长简介</a></li>
           <li><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;捐赠家族</a></li>
           <li><a href="https://weibo.com/6584151447/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><i class="fa fa-home"></i> &nbsp;家主微博</a></li>
 		  <li><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
