--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -22,7 +22,7 @@
         <h3>&nbsp;&nbsp;&nbsp;获取帮助</h3>
         <ul>
             <li>Git项目地址：<a href="https://github.com/yishuijianghu/xiucai" target="_blank">https://github.com/yishuijianghu/xiucai</a></li>
-            <li>关注秀才家族微博，您的关注就是对家族最好的支持</li>
+            <li>关注秀才家族微博，您的关注就是对家族最好的支持,ing</li>
         </ul>
 
         <h3>&nbsp;&nbsp;&nbsp;秀才QQ</h3>
