--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -29,7 +29,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>一水</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>一水家族系统</b></span>
+      <span class="logo-lg"><b>我的个人生活</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
