--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -23,7 +23,7 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
   <div class="login-logo">
-    <b>一水家族系统</b>
+    <b>我的个人生活</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
