--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>一水家族系统</title>
+  <title>我的个人生活</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap.min.css">
@@ -40,8 +40,8 @@
 	  <div style="float:left;color:#fff;padding:15px 10px;">欢迎 {{user.username}}</div>
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <li><a href="javascript:;" @click="welcome"><i class="font-color:red"></i> &nbsp;族长简介</a></li>
-          <li><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;捐赠家族</a></li>
+          <li><a href="javascript:;" @click="welcome"><i class="font-color:red"></i> &nbsp;秀才简介</a></li>
+          <li><a href="javascript:;" @click="donate"><i class="fa fa-jpy"></i> &nbsp;秀才微信</a></li>
           <li><a href="https://weibo.com/6584151447/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><i class="fa fa-home"></i> &nbsp;家主微博</a></li>
 		  <li><a href="javascript:;" @click="updatePassword"><i class="fa fa-lock"></i> &nbsp;修改密码</a></li>
           <li><a href="logout"><i class="fa fa-sign-out"></i> &nbsp;退出系统</a></li>
