--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -13,8 +13,8 @@
     <div style="padding: 10px 0 20px 10px;">
         <h3>&nbsp;&nbsp;&nbsp;家族介绍</h3>
         <ul>
-            <li>一水家族系统是给一水家族开发的pc端管理系统</li>
-            <li>设计之初，就很看重每个成员在家族的发展和权益，让生活变得更加简单美好。</li>
+            <li>该系统是给一水江湖开发的个人生活记录后台管理系统</li>
+            <li>设计之初，就是为了记录秀才生活的点滴，让生活变得更加简单美好。</li>
             <li>此生若得幸福安稳，谁又愿颠沛流离</li>
             <li>推荐使用阿里云服务器部署项目，免费领取阿里云优惠券，请点击【<a href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=k9nekzub">免费领取阿里云服务</a>】</li>
         </ul>
@@ -22,13 +22,13 @@
         <h3>&nbsp;&nbsp;&nbsp;获取帮助</h3>
         <ul>
             <li>Git项目地址：<a href="https://github.com/yishuijianghu/xiucai" target="_blank">https://github.com/yishuijianghu/xiucai</a></li>
-            <li>关注秀才家族微博，您的关注就是对家族最好的支持,ing</li>
+            <li>关注秀才微博，您的关注就是对秀才最好的支持,ing</li>
         </ul>
 
         <h3>&nbsp;&nbsp;&nbsp;秀才QQ</h3>
         <ul>
             <li>1024936497</li>
-            <li>一水家族俱乐部网站：www.xiucai.club(暂时未开通)</li>
+            <li>秀才个人生活网站：www.lvxiucai.club(即将开通)</li>
         </ul>
     </div>
 </div>
