--- a/src/main/webapp/WEB-INF/views/index1.html
+++ b/src/main/webapp/WEB-INF/views/index1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>一水家族系统</title>
+	<title>我的个人生活</title>
 	<meta name="renderer" content="webkit">	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
@@ -20,7 +20,7 @@
 		<div class="layui-main">
 		    <!-- logo区域 -->
 			<div class="admin-logo-box">
-				<a class="logo" href="javascript:;">一水家族系统</a>
+				<a class="logo" href="javascript:;">我的个人生活</a>
 				<div class="larry-side-menu">
 					<i class="fa fa-bars" aria-hidden="true"></i>
 				</div>
