--- a/src/main/webapp/WEB-INF/views/modules/client/welcom.html
+++ b/src/main/webapp/WEB-INF/views/modules/client/welcom.html
@@ -139,7 +139,7 @@
 		<h4 class="title-w3ls">About Me</h4>
 		<h5 class="sub">The brief introduction of myself</h5>
 		<p class="para-w3-agile">一个流浪多年的旅者，就算自己是一朵狗尾巴草，也要拧出一朵花来，生活就是战斗 。</p>
-		<p class="para-w3-agile">赚钱治愈一切矫情，有钱治愈一切自卑，忧愁也是好的，孤独也是好的，最终它们会让我变成一个于总不同的混蛋 </p>
+		<p class="para-w3-agile">赚钱治愈一切矫情，有钱治愈一切自卑，忧愁也是好的，孤独也是好的，最终它们会让我变成一个与众不同的混蛋 </p>
 		<div class="skills-bar">
 		<h4 class="title-w3ls">My Skills</h4>
 			<section class='bar'>
