--- a/src/main/webapp/WEB-INF/views/register.html
+++ b/src/main/webapp/WEB-INF/views/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>我的个人生活</title>
+  <title>用户注册</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap.min.css">
@@ -23,26 +23,31 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
   <div class="login-logo">
-    <b>我的个人生活</b>
+    <b>用户注册</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-      <p class="login-box-msg">管理员登录</p>
+      <p class="login-box-msg">注册</p>
       <div v-if="error" class="alert alert-danger alert-dismissible">
         <h4 style="margin-bottom: 0px;"><i class="fa fa-exclamation-triangle"></i> {{errorMsg}}</h4>
       </div>
       <div class="form-group has-feedback">
-        <input type="text" class="form-control" v-model="username" placeholder="账号">
+        <input type="text" class="form-control" v-model="username" @blur="checkUsername" placeholder="账号">
         <span class="glyphicon glyphicon-user form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
         <input type="password" class="form-control" v-model="password" placeholder="密码">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
-      <div>
-
+      <div class="form-group has-feedback">
+          <input type="text" class="form-control" v-model="email" placeholder="邮箱">
+          <span class="glyphicon glyphicon-user form-control-feedback"></span>
       </div>
-     <!-- <div class="form-group has-feedback">
+      <div class="form-group has-feedback">
+          <input type="text" class="form-control" v-model="mobile" placeholder="手机号">
+          <span class="glyphicon glyphicon-user form-control-feedback"></span>
+      </div>
+      <!--<div class="form-group has-feedback">
         <input type="text" class="form-control" v-model="captcha" @keyup.enter="login" placeholder="验证码">
         <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
       </div>
@@ -54,12 +59,12 @@
       
       <div class="row">
         <div class="col-xs-8">
-            <button type="button" class="btn btn-primary btn-block btn-flat" @click="register">注册</button>
-
+          <div class="checkbox icheck">
+          </div>
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="button" class="btn btn-primary btn-block btn-flat" @click="login">登录</button>
+          <button type="button" class="btn btn-primary btn-block btn-flat" @click="register">提交</button>
         </div>
         <!-- /.col -->
       </div>
@@ -81,6 +86,8 @@ var vm = new Vue({
 	data:{
 		username: '',
 		password: '',
+        email:'',
+        mobile:'',
 		captcha: '',
 		error: false,
 		errorMsg: '',
@@ -95,24 +102,43 @@ var vm = new Vue({
 		refreshCode: function(){
 			this.src = "captcha.jpg?t=" + $.now();
 		},
-        register: function(){
-		    window.location.href = 'register.html';
+        checkUsername: function () {
+          var data = "username="+vm.username;
+          $.ajax({
+              type: "GET",
+              url: "customer/checkUsername",
+              data: data,
+              dataType: "json",
+              success: function(result){
+                  if(result.code == 666){//检验通过
+                      vm.error = false;
+                      vm.errorMsg = '';
+                  }else{
+                      vm.error = true;
+                      vm.errorMsg = result.msg;
+                  }
+              }
+          })
         },
-		login: function (event) {
-			var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
-			$.ajax({
+        register: function () {
+			var data = {
+			  username:vm.username,
+              password:vm.password,
+              email:vm.email,
+              mobile:vm.mobile
+            };
+            $.ajax({
 				type: "POST",
-			    url: "sys/login",
-			    data: data,
+			    url: "customer/register",
+			    data: JSON.stringify(data),
+                contentType: "application/json;charset=utf-8",
 			    dataType: "json",
 			    success: function(result){
-					if(result.code == 0){//登录成功
-						parent.location.href ='index.html';
+					if(result.code === 666){//注册成功
+						window.location.href ='login.html';
 					}else{
 						vm.error = true;
 						vm.errorMsg = result.msg;
-						
-						vm.refreshCode();
 					}
 				}
 			});
