--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -19,6 +19,17 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+    <style type="text/css">
+        #footer {
+            text-align: center;
+            font-size:16px;
+            position: relative;
+            margin-top: 150px;
+            height: 30px;
+            clear:both;
+            background: #CCC;
+        }
+    </style>
 </head>
 <!-- ADD THE CLASS layout-boxed TO GET A BOXED LAYOUT -->
 <body class="hold-transition skin-blue sidebar-mini">
@@ -123,7 +134,11 @@
 
 </div>
 <!-- ./wrapper -->
-
+<footer>
+    　　<div id="footer">
+    <a href="http://www.miitbeian.gov.cn/" target="_blank">鲁ICP备19001729号</a>
+</div>
+</footer>
 
 
 <script src="${request.contextPath}/statics/libs/jquery.min.js"></script>
