--- a/src/main/webapp/WEB-INF/views/modules/client/welcom.html
+++ b/src/main/webapp/WEB-INF/views/modules/client/welcom.html
@@ -352,7 +352,7 @@
 
 	<div class="footer">
 		<div class="container">
-			<p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="" target="_blank" title="一水之家">一水之家</a> </p>
+			<p><a href="http://www.miitbeian.gov.cn/" target="_blank">鲁ICP备19001729号</a> </p>
 		</div>
 	</div>
 <!-- //footer -->
