--- a/src/main/webapp/WEB-INF/views/adminLogin.html
+++ b/src/main/webapp/WEB-INF/views/adminLogin.html
@@ -19,17 +19,6 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-    <style type="text/css">
-        #footer {
-            text-align: center;
-            font-size:16px;
-            position: relative;
-            margin-top: 150px;
-            height: 30px;
-            clear:both;
-            background: #CCC;
-        }
-    </style>
 </head>
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
@@ -38,7 +27,7 @@
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-      <p class="login-box-msg">访客登录</p>
+      <p class="login-box-msg">管理员登录</p>
       <div v-if="error" class="alert alert-danger alert-dismissible">
         <h4 style="margin-bottom: 0px;"><i class="fa fa-exclamation-triangle"></i> {{errorMsg}}</h4>
       </div>
@@ -64,15 +53,12 @@
       
       
       <div class="row">
-        <div class="col-xs-4">
-            <button type="button" class="btn btn-primary btn-block btn-flat" @click="register">注册</button>
-        </div>
-        <div class="col-xs-4">
-          <button type="button" class="btn btn-primary btn-block btn-flat" @click="adminLogin">管理员</button>
+        <div class="col-xs-8">
+            <!--<button type="button" class="btn btn-primary btn-block btn-flat" @click="register">注册</button>-->
         </div>
         <!-- /.col -->
-        <div class="col-xs-4">
-          <button type="button" class="btn btn-primary btn-block btn-flat" @click="login">登录</button>
+        <div class="col-xs-8">
+          <button type="button" class="btn btn-primary btn-block btn-flat" @click="login">管理员登录</button>
         </div>
         <!-- /.col -->
       </div>
@@ -111,9 +97,6 @@ var vm = new Vue({
         register: function(){
 		    window.location.href = 'register.html';
         },
-        adminLogin :function () {
-            window.location.href = 'adminLogin.html';
-        },
 		login: function (event) {
 			var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
 			$.ajax({
@@ -122,8 +105,8 @@ var vm = new Vue({
 			    data: data,
 			    dataType: "json",
 			    success: function(result){
-					if(result.code == 0){//访问客户登录成功
-						window.location.href ='../modules/client/welcom.html';
+					if(result.code == 0){//登录成功
+						parent.location.href ='index.html';
 					}else{
 						vm.error = true;
 						vm.errorMsg = result.msg;
@@ -136,10 +119,5 @@ var vm = new Vue({
 	}
 });
 </script>
-
-<footer>
-    　　<div id="footer">
-            <a href="http://www.miitbeian.gov.cn/" target="_blank">鲁ICP备19001729号</a>
-        </div>
-</footer>
 </body>
+</html>
