--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -118,7 +118,7 @@ var vm = new Vue({
 			var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
 			$.ajax({
 				type: "POST",
-			    url: "sys/login",
+			    url: "customer/login",
 			    data: data,
 			    dataType: "json",
 			    success: function(result){
