把交互去掉

--- a/src/main/webapp/WEB-INF/views/modules/client/welcom.html
+++ b/src/main/webapp/WEB-INF/views/modules/client/welcom.html
@@ -204,8 +204,8 @@
 	<div class="container">
 	<span class="about-top-w3">The best of my story </span>
 		<h4 class="title-w3ls">You can see my story here</h4>
-		<div class="news-bottom">
-				<div class="news-one-wthree-agile">
+		<div class="news-bottom" id="tu-index1">
+				<div class="news-one-wthree-agile" >
 					<div class="col-md-6 news-left">
 						        <div class="biseller-column">
 										<a class="lightbox" href="#one">
@@ -214,24 +214,26 @@
 										<div class="lightbox-target" id="one">
 										 <img src="${request.contextPath}/statics/images/gushi.jpg" alt=""/>
 										 <p class="pop">成长就是自己价值体系不断完善的过程，好奇，尝试，努力，挑战。。</p>
-										   <a class="lightbox-close" href="#"> </a>
+										 <a class="lightbox-close" href="#tu-index1"> </a>
 											
-											<div class="clearfix"> </div>
+										 <div class="clearfix"> </div>
 											
 										</div>
 							   </div>
 
 					</div>	
 					<div class="col-md-6 news-right"> 
-					<a href="#one"><h4>Xiucai Design</h4></a>
-						<p class="para-w3-agile"></p>
+					<a href="#one"><h4>Miss You For Long</h4></a>
+						<p class="para-w3-agile">若无缘，三千大千世界，百万菩提众生，为何与我笑颜独展，惟独与汝相见？</p>
+						<p class="para-w3-agile">若有缘，待到灯花百结之后，三尺之雪，一夜白发，至此无语，却只有灰烬，没有复燃？</p>
 					</div>	
 					<div class="clearfix"> </div>	
 				</div>
-				<div class="news-one-wthree-agile">
+				<div class="news-one-wthree-agile" id="tu-index2">
 					<div class="col-md-6 news-right"> 
 						<a href="#three"><h4>陌上花开</h4></a>
 						<p class="para-w3-agile">三十年众生牛马，六十年诸佛龙象</p>
+						<p class="para-w3-agile">将心比心，便是佛心</p>
 					</div>	
 					<div class="col-md-6 news-left">
 						 <div class="biseller-column">
@@ -241,7 +243,7 @@
 										<div class="lightbox-target" id="three">
 										 <img src="${request.contextPath}/statics/images/lizhi.jpg" alt=""/>
 										 <p class="pop">愿我走出半生，归来仍是少年！All will bewell</p>
-										   <a class="lightbox-close" href="#"> </a>
+										   <a class="lightbox-close" href="#tu-index2"> </a>
 											
 											<div class="clearfix"> </div>
 										</div>
@@ -250,7 +252,7 @@
 					</div>						
 					<div class="clearfix"> </div>	
 				</div>	
-			  <div class="news-one-wthree-agile">
+			  <div class="news-one-wthree-agile" id="tu-index3">
 					<div class="col-md-6 news-left">
 							<div class="biseller-column">
 										<a class="lightbox" href="#two">
@@ -259,7 +261,7 @@
 										<div class="lightbox-target" id="two">
 										 <img src="${request.contextPath}/statics/images/haidai.jpg" alt=""/>
 										 <p class="pop">时光煮雨，美酒伴梦，你是我永不企及的阳光！</p>
-										   <a class="lightbox-close" href="#"> </a>
+										   <a class="lightbox-close" href="#tu-index3"> </a>
 											
 											<div class="clearfix"> </div>
 										</div>
@@ -269,10 +271,13 @@
 					<div class="col-md-6 news-right"> 
 					<a href="#two"><h4>romantic of soul</h4></a>
 						<p class="para-w3-agile">下雨唱歌的人儿和下雨听歌的人儿都是浪漫的；梦想两三刀，累倒再逍遥</p>
+						<p class="para-w3-agile">一个人的处境是苦是乐常是主观的。有人安于某种生活，有人不能。因此能安于自已目前处境的不妨就如此生活下去，不能的只好努力另找出路。
+							你无法断言哪里才是成功的，也无法肯定当自已到达了某一点之后，会不会快乐。有些人永远不会感到满足，他的快乐只建立在不断地追求与争取的过程之中，
+							因此，他的目标不断地向远处推移。这种人的快乐可能少，但成就可能大。</p>
 					</div>	
 					<div class="clearfix"> </div>	
 				</div>	
-				<div class="news-one-wthree-agile">
+				<div class="news-one-wthree-agile" id="tu-index4">
 					<div class="col-md-6 news-right"> 
 						<a href="#four"><h4>One song from heart</h4></a>
 						<p class="para-w3-agile">清晨在霖霖雨声中醒来，匆忙收拾出门上班，走在路上，同样是降水，老家应该是雪花飞舞吧。在公交上，突然好想家，愈渐苍老年迈的奶奶，年过半百依然辛苦奋斗在一线的父母，我想回家，听他们闲聊生活中的家长里短；我想回家，给他们做一顿软糯可口的饭菜</p>
@@ -285,7 +290,7 @@
 										<div class="lightbox-target" id="four">
 										 <img src="${request.contextPath}/statics/images/fengjing.jpg" alt=""/>
 										 <p class="pop">年年岁岁花相似，岁岁年年孤一人。又痴长了一岁，离三张越来越近</p>
-										   <a class="lightbox-close" href="#"> </a>
+										   <a class="lightbox-close" href="#tu-index4"> </a>
 											
 											<div class="clearfix"> </div>
 										</div>
@@ -294,7 +299,7 @@
 					</div>						
 					<div class="clearfix"> </div>	
 				</div>	
-				 <div class="news-one-wthree-agile">
+				 <div class="news-one-wthree-agile" id="tu-index5">
 					<div class="col-md-6 news-left">
 							<div class="biseller-column">
 										<a class="lightbox" href="#five">
@@ -303,7 +308,7 @@
 										<div class="lightbox-target" id="five">
 										 <img src="${request.contextPath}/statics/images/zi.jpg" alt=""/>
 										 <p class="pop">一个人，一条路，一直跑</p>
-										   <a class="lightbox-close" href="#"> </a>
+										   <a class="lightbox-close" href="#tu-index5"> </a>
 											
 											<div class="clearfix"> </div>
 										</div>
@@ -312,7 +317,7 @@
 					</div>	
 					<div class="col-md-6 news-right"> 
 					<a href="#five"><h4>Xiucai Design</h4></a>
-						<p class="para-w3-agile">.</p>
+						<p class="para-w3-agile">每一个坚强的人，不是不懂失望不懂伤悲，他们只是懂得不管有多累不管有多痛，内心的脆弱必须以微笑来伪装。他们的眼泪永远都是流在故事的结尾，流在一切结束的时候！</p>
 					</div>	
 					<div class="clearfix"> </div>	
 				</div>
@@ -323,15 +328,16 @@
 <!-- //projects -->
 <!-- contact -->
 <div class="contact" id="contact">
-	<div class="container">
+	<div class="container"><h4>ok,暂时就只有这些了，各位老铁~~~~~~</h4></div>
+	<!--<div class="container">
 	<span class="about-top-w3">敬请留言</span>
 		<h4 class="title-w3ls">联系我</h4>
 		<div class="col-md-5 contact-agileits-w3layouts">
-		<form action="#" method="post">
-				<input type="text" name="Your Name" placeholder="Name" required="" />
-				<input type="email" name="Your Email" placeholder="Email" required="" />
-				<input type="text" Name="Phone Number" placeholder="Number" required=""/>
-				<textarea name="Message" placeholder="Message" required></textarea>
+			<form  method="post" onsubmit="return submit()">
+				<input type="text" name="Your Name" placeholder="Name" id="name" required="" />
+				<input type="email" name="Your Email" placeholder="Email" id="email" required="" />
+				<input type="text" Name="Phone Number" placeholder="Number" id="number" required=""/>
+				<textarea name="Message" placeholder="Message" id="message" required></textarea>
 				<input type="submit" value="Submit">
 			</form>
 			<h5 class="sub">Looking for Address</h5>
@@ -346,7 +352,7 @@
 
 
 		</div>
-	</div>
+	</div>-->
 </div>
 <!-- //about -->
 
@@ -357,7 +363,37 @@
 	</div>
 <!-- //footer -->
 <script src="${request.contextPath}/statics/js/modules/client/bars.js"></script>
+<script type="text/javascript">
 
+
+
+    function submit() {
+		var data= {
+            name:$("#name").val(),
+			email:$("#email").val(),
+			number:$("#number").val(),
+			message:$("#message").val()
+        };
+		var jsonData = JSON.stringify(data);
+        $.ajax({
+            url: customer/submitInfo,
+            type: 'POST',
+            dataType: 'json',
+            data: jsonData,
+            success: function(res){
+				if(res.data.code == 666){
+                    alert("已经接受到您的消息，再次感谢光临寒舍");
+				}
+                alert("提交失败，请稍后重试或直接联系秀才本人");
+            },
+            error: function(res){
+				alert("提交失败，请稍后重试或直接联系秀才本人");
+            }
+        })
+    }
+
+
+</script>
 <!-- here stars scrolling icon -->
 	<script type="text/javascript">
 		$(document).ready(function() {
