--- a/src/main/webapp/WEB-INF/views/modules/client/welcom.html
+++ b/src/main/webapp/WEB-INF/views/modules/client/welcom.html
@@ -113,7 +113,9 @@
 					</ul>
 		</div>
 		<div class="banner-right-w3-agileits">
-			<iframe src=""></iframe>
+			<!--<iframe src=""></iframe>-->
+			<img src="${request.contextPath}/statics/images/jianghu.jpg" alt=" "  >
+
 		</div>
 		<div class="clearfix"></div>
 	</div>
@@ -170,7 +172,7 @@
 					<h4>2017 - 2018 in Hangzhou </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Project Manager</h5>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Poor Coder</h5>
 					<p>懂得这么多道理，却依旧过不好这一生，原因有两点，一是不能很好的执行，须知知行合一才能有所得。另一个就是人生不如意十之八九</p>
 				</div>
 				<div class="clearfix"> </div>
